# minimal-area-triangle

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
cmake/modules/: AddDebugPostfix.cmake  AddExecutableInstallTarget.cmake  AddSample.cmake  AddUnitTest.cmake  FindXerces.cmake  GenerateCustomModelChecker.cmake  GetCurrentDate.cmake  UpdateProjectBuildNumber.cmake  UpdateProjectModifiedDate.cmake
cmake/package/: CPackConfig.cmake
data/random_convex_polygon/: random_convex_polygon_101_4.txt  random_convex_polygon_103_6.txt  random_convex_polygon_108_1.txt  random_convex_polygon_109_5.txt  random_convex_polygon_110_4.txt  random_convex_polygon_112_8.txt  random_convex_polygon_114_5.txt  random_convex_polygon_115_2.txt  random_convex_polygon_115_8.txt  random_convex_polygon_118_7.txt  random_convex_polygon_11_3.txt  random_convex_polygon_120_2.txt  random_convex_polygon_122_4.txt  random_convex_polygon_124_2.txt  random_convex_polygon_125_9.txt  random_convex_polygon_129_8.txt  random_convex_polygon_12_4.txt  random_convex_polygon_130_1.txt  random_convex_polygon_132_2.txt  random_convex_polygon_135_3.txt  random_convex_polygon_136_3.txt  random_convex_polygon_138_6.txt  random_convex_polygon_139_8.txt  random_convex_polygon_13_2.txt  random_convex_polygon_142_10.txt  random_convex_polygon_142_2.txt  random_convex_polygon_144_10.txt  random_convex_polygon_148_9.txt  random_convex_polygon_14_1.txt  random_convex_polygon_150_8.txt  random_convex_polygon_155_10.txt  random_convex_polygon_159_6.txt  random_convex_polygon_15_10.txt  random_convex_polygon_160_5.txt  random_convex_polygon_161_6.txt  random_convex_polygon_162_9.txt  random_convex_polygon_164_8.txt  random_convex_polygon_165_10.txt  random_convex_polygon_167_5.txt  random_convex_polygon_168_8.txt  (+58 more)
data/random_convex_polygon_correctness/: random_convex_polygon_100_4.txt  random_convex_polygon_102_1.txt  random_convex_polygon_104_10.txt  random_convex_polygon_105_6.txt  random_convex_polygon_106_3.txt  random_convex_polygon_107_3.txt  random_convex_polygon_10_1.txt  random_convex_polygon_111_10.txt  random_convex_polygon_113_5.txt  random_convex_polygon_116_7.txt  random_convex_polygon_117_1.txt  random_convex_polygon_119_6.txt  random_convex_polygon_121_8.txt  random_convex_polygon_123_8.txt  random_convex_polygon_126_7.txt  random_convex_polygon_127_9.txt  random_convex_polygon_128_9.txt  random_convex_polygon_129_7.txt  random_convex_polygon_131_1.txt  random_convex_polygon_133_1.txt  random_convex_polygon_134_6.txt  random_convex_polygon_137_7.txt  random_convex_polygon_140_8.txt  random_convex_polygon_141_10.txt  random_convex_polygon_143_6.txt  random_convex_polygon_145_6.txt  random_convex_polygon_146_9.txt  random_convex_polygon_147_5.txt  random_convex_polygon_149_10.txt  random_convex_polygon_151_4.txt  random_convex_polygon_152_9.txt  random_convex_polygon_153_3.txt  random_convex_polygon_154_2.txt  random_convex_polygon_155_2.txt  random_convex_polygon_156_5.txt  random_convex_polygon_157_3.txt  random_convex_polygon_158_1.txt  random_convex_polygon_163_4.txt  random_convex_polygon_166_8.txt  random_convex_polygon_169_1.txt  (+71 more)
data/random_convex_polygon_sample/: benchmark_100_1.txt  benchmark_100_2.txt  benchmark_100_3.txt
include/triangle/core/: MinimalAreaTriangle.hpp  MinimalAreaTriangleTest.hpp
include/triangle/exception/: AlgorithmException.hpp  ExceptionHandler.hpp  IOException.hpp  InvalidInputException.hpp  MinimalAreaTriangleException.hpp  NumericException.hpp  TestException.hpp  UnexpectedBehaviourException.hpp
modules/: CMakeLists.txt
modules/triangle/: CMakeLists.txt
modules/triangle/include/triangle/: BruteForceMinAreaEnclosingTriangleFinder.hpp  Geometry2D.hpp  LinearMinAreaEnclosingTriangleFinder.hpp  MinAreaEnclosingTriangleFinder.hpp  Numeric.hpp
modules/triangle/sample/: MinAreaEnclosingTriangleFinderSample.cpp
modules/triangle/src/: BruteForceMinAreaEnclosingTriangleFinder.cpp  Geometry2D.cpp  LinearMinAreaEnclosingTriangleFinder.cpp  MinAreaEnclosingTriangleFinder.cpp  Numeric.cpp
modules/triangle/test/: BruteForceMinAreaEnclosingTriangleFinderTest.cpp  Geometry2DTest.cpp  LinearMinAreaEnclosingTriangleFinderTest.cpp  MinAreaEnclosingTriangleFinderTest.cpp  MinAreaEnclosingTriangleFinderTest.hpp  RandomPolygonsCorrectnessTest.cpp  RegularPolygonsAffineTransformationsCorrectnessTest.cpp  RegularPolygonsCorrectnessTest.cpp
modules/util/: CMakeLists.txt
modules/util/include/triangle/util/: Filesystem.hpp  Geometry2D.hpp  Numeric.hpp  StringManipulator.hpp
modules/util/src/: Filesystem.cpp  Geometry2D.cpp  Numeric.cpp
script/: CreateC++PolygonRepresentation.sh  PlotPolygonAndEnclosingTriangle.R
