#------------------------------------------------------------
# Add include paths
#------------------------------------------------------------

include_directories(util/include)


#------------------------------------------------------------
# Add subdirectories
#------------------------------------------------------------

add_subdirectory(triangle)
add_subdirectory(util)